# log-server

./: .gitignore  LICENSE  flake.nix  pyproject.toml
nix/: all-systems.nix  systemd.nix
src/: server.py
src/server/: main.py
