[project]
name = "log-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "build>=1.3.0",
    "fastapi>=0.117.1",
    "jwt>=1.4.0",
    "setuptools>=80.9.0",
    "uvicorn>=0.37.0",
    "wheel>=0.45.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
log-server = "server:main"
